# 3d-curves-hierarchy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Circle.h  Curve.h  Ellipse.h  Helix.h
src/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Helix.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
